--- a/engine/.vscode/launch.json
+++ b/engine/.vscode/launch.json
@@ -14,7 +14,7 @@
             "cwd": "${workspaceFolder}",
             "environment": [],
             "externalConsole": false,
-            "preLaunchTask": "cl.exe build active file"
+            "preLaunchTask": "Compile"
         }
     ]
 }
