--- a/engine/.vscode/tasks.json
+++ b/engine/.vscode/tasks.json
@@ -3,13 +3,14 @@
 	"tasks": [
 		{
 			"type": "shell",
-			"label": "cl.exe build active file",
+			"label": "Compile",
 			"command": "cl.exe",
 			"args": [
 				"/Zi",
 				"/EHsc",
 				"/Fe:",
 				"bin\\debug\\engine.exe",
+				"-I${workspaceFolder}\\include",
 				"${file}"
 			],
 			"problemMatcher": [
