--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -5,8 +5,12 @@ include(CTest)
 enable_testing()
 
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE})
+include_directories(${PROJECT_SOURCE_DIR}/include/)
+link_directories(${PROJECT_SOURCE_DIR}/lib/)
 add_executable(engine main.cpp)
 
+target_link_libraries(engine glew32)
+target_link_libraries(engine glfw3)
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
 include(CPack)
