--- a/engine/.vscode/launch.json
+++ b/engine/.vscode/launch.json
@@ -2,6 +2,7 @@
     // Use IntelliSense to learn about possible attributes.
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+    // ref https://github.com/microsoft/vscode/issues/8706
     "version": "0.2.0",
     "configurations": [
         {
@@ -13,7 +14,8 @@
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
-            "externalConsole": false
+            "externalConsole": false,
+            "internalConsoleOptions": "openOnSessionStart"
         }
     ]
 }
